--- a/project.yaml
+++ b/project.yaml
@@ -28,9 +28,21 @@ advanced:
     headers:
         - { header: User-Agent, value: 'Mozilla/5.0 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)' }
     cookies: ''
-    custom_js: ''
+    custom_js: "// Stop videos\ndocument.querySelectorAll('video').forEach(v => { v.pause(); v.currentTime = 0; });\n\n// Stop slick slider\nsetInterval(function(){\n  \tjQuery('.slick-slider').slick('slickGoTo', 0, true);\n\tjQuery('.slick-slider').slick('slickSetOption', 'autoplay', false, true);\n\tjQuery('.slick-slider').slick('slickPause');\n}, 1000);\n"
     custom_css: ''
-    mock_content: ''
+    mock_content:
+        - { selector: '', type: title }
+    login:
+        type: none
+        click_element: false
+        click_element_selector: ''
+        login_url: ''
+        username: ''
+        password: ''
+        username_selector: ''
+        password_selector: ''
+        submit_selector: ''
+        after_login_selector: ''
     performance:
         workers_production: '15'
         workers_nonproduction: '10'
